Fixed JDK 1.5 compatibility.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,7 @@ jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.5
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
