Created acceptedFileNames test case.

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
         </plugins>
@@ -29,7 +37,7 @@
     </dependencies>
     <distributionManagement>
         <downloadUrl>http://192.168.2.111/maven-snapshots</downloadUrl>
-        
+
         <snapshotRepository>
             <uniqueVersion>true</uniqueVersion>
             <id>blubox</id>
@@ -37,4 +45,7 @@
             <layout>default</layout>
         </snapshotRepository>
     </distributionManagement>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
