--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.meetwise.fs</groupId>
-  <artifactId>fat32-lib</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>fat32-lib</name>
-  <url>http://maven.apache.org</url>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.meetwise.fs</groupId>
+    <artifactId>fat32-lib</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+
+    <name>fat32-lib</name>
+
+    <description>
+        A Java library for manipulating FAT file systems.
+    </description>
+
+    <url>http://code.google.com/p/fat32-lib/</url>
+
+    <issueManagement>
+        <system>Google Code</system>
+        <url>http://code.google.com/p/fat32-lib/issues/list</url>
+    </issueManagement>
+    
     <build>
         <plugins>
             <plugin>
@@ -33,7 +45,26 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!--
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ftp</artifactId>
+            </extension>
+        </extensions>
+        -->
     </build>
+
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -42,16 +73,23 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <distributionManagement>
-        <downloadUrl>http://192.168.2.111/maven-snapshots</downloadUrl>
+        <downloadUrl>http://waldheinz.de/maven/snapshots/fat32-lib</downloadUrl>
 
         <snapshotRepository>
             <uniqueVersion>true</uniqueVersion>
-            <id>blubox</id>
-            <url>scp://192.168.2.111/var/www/maven-snapshots/</url>
+            <id>waldheinz.de</id>
+            <url>ftp://waldheinz.de/snapshots/fat32-lib</url>
             <layout>default</layout>
         </snapshotRepository>
+        
+        <site>
+            <id>waldheinz.de</id>
+            <url>ftp://waldheinz.de/site/fat32-lib</url>
+        </site>
     </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
