--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <system>Google Code</system>
         <url>http://code.google.com/p/fat32-lib/issues/list</url>
     </issueManagement>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -62,9 +62,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
+            
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
         </plugins>
     </reporting>
-
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -83,7 +87,7 @@
             <url>ftp://waldheinz.de/snapshots/fat32-lib</url>
             <layout>default</layout>
         </snapshotRepository>
-        
+
         <site>
             <id>waldheinz.de</id>
             <url>ftp://waldheinz.de/site/fat32-lib</url>
