exfat: Implemented basic NodeFile.read(..).

--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,15 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.1</version>
+            <scope>test</scope>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
