Updated SCM URLs in pom to be in sync with what the google code website suggests.

--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
         </url>
         
         <connection>
-            scm:hg:https://fat32-lib.googlecode.com/hg/
+            scm:hg:https://code.google.com/p/fat32-lib/
         </connection>
         
         <developerConnection>
-            scm:hg:https://fat32-lib.googlecode.com/hg/
+            scm:hg:https://code.google.com/p/fat32-lib/
         </developerConnection>
     </scm>
     
