--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,12 @@
     <description>A library for manipulating FAT file systems.</description>
     <url>https://github.com/waldheinz/fat32-lib</url>
     
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    
     <prerequisites>
-        <maven>2.2.1</maven>
+        <maven>3.0.0</maven>
     </prerequisites>
     
     <parent>
@@ -34,8 +38,16 @@
         <developerConnection>scm:git:git@github.com:waldheinz/fat32-lib.git</developerConnection>
     </scm>
     
+    <developers>
+        <developer>
+            <id>trem</id>
+            <name>Matthias Treydte</name>
+            <email>mt@waldheinz.de</email>
+        </developer>
+    </developers>
+    
     <issueManagement>
-        <system>GitHub Issue Tracker</system>
+        <system>GitHub</system>
         <url>https://github.com/waldheinz/fat32-lib/issues</url>
     </issueManagement>
     
@@ -43,7 +55,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.7</version>
             </plugin>
             
             <plugin>
@@ -68,13 +80,21 @@
             
             <plugin>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.2</version>
+                <version>3.3</version>
                 
                 <configuration>
                     <reportPlugins>
                         <plugin>
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <version>2.9</version>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-changes-plugin</artifactId>
+                            <version>2.9</version>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.2</version>
                         </plugin>
                     </reportPlugins>
                 </configuration>
@@ -147,6 +167,23 @@
         </plugins>
     </build>
     
+    <reporting>
+        <plugins>
+            <plugin>
+                <artifactId>maven-changes-plugin</artifactId>
+                <version>2.9</version>
+                
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>changes-report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -187,10 +224,6 @@
             </build>
         </profile>
     </profiles>
-    
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     
     <distributionManagement>
         <site>
