--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <artifactId>junit-dep</artifactId>
             <version>4.11</version>
             <scope>test</scope>
             <type>jar</type>
@@ -232,7 +232,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.1</version>
+            <version>1.3</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
