--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                  <source>8</source>
+                </configuration>
             </plugin>
             
             <plugin>
